src/_webapp/ressources/css/public.css
#progressBar {
    top: 0;
    cursor: auto;
    font-size:  17px;
}
#progressBarColor, #progressBar {
	height: 30px;
}

#karaInfo {
    padding: 0px 5px;
    line-height: 30px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.header button.btn {
    font-size : 21px;
    line-height: 21px;
    width: 60px;
}
.header button.btn.favorites {
    display: none;
    height: calc(100% - 1px);
    border: 0;
    order: 3;
}
.header button.btn.favorites.on {
    color: firebrick;
}

.header {
	position: absolute;
	z-index: 1337;
	background-color: #1E2124;
    top: 30px;
	height: 60px;
	width: 100%;
	border-bottom: solid 1px hsla(0, 0%, 35%, 1);
}

.header > div {
    height: 60px;
    padding: 0px;
}
.headerInputs {
    padding: 0px 7px;
    display: flex;
}
.header > div > div {
    height: 100%;
    padding: 1px 0px 1px 1px;
}
.header .dropdown {
    padding: 0px 0px 0px 0px;
}
.underHeader {
    position: relative;	
    top: calc( 60px + 30px );
    height: calc( 100% - 60px - 30px );
}  
.underHeader.mode1 {
    top: calc( 30px );
    height: calc( 100% - 30px );
}
.bootstrap-switch-container i {
    font-size: 20px;
    top: 3px;
}
div.bootstrap-switch-large{
    width: 100%;
	height: 100%;
	background-color: #9e9e9e; ;
}
.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary, .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-secondary {
   height: 120%;
   line-height: 34px;
   font-size : 34px;
}

.dropdown-menu > li > a {
    font-size :   21px;
}

.playlist-main {
   height : 100%;
}
.panel {
    height : 100%;
}

.panel-heading > div,.panel-heading > div > div, .panel-heading > div > div > div, .panel-heading > div > div > div > input {
    height: 100%;
}
 .panel-heading > div > div , .panel-heading > div > div > div, .panel-heading > div > div > div > input {
     width: 100%;
 }
.list-group-item {
    font-size: 14px;
}
.playlist-main .list-group-item[user] {
	color: hsla(110, 35%, 78%, 1);
}

.header input {
    height: 100%;
    border-radius: 0px;
}

.badge {
    font-size: 12px;
}

.right-inner-addon i {
  right: 0px;
  left: auto;
}

#playlist1[canTransferKara="true"] > li {
    cursor : pointer;
}

#searchParent {
    display: flex;
}

.header input, .header .getLucky {
    __box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.20), 0 1px 8px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.16);
}

.header .pseudoChange {
    order: 10;
}
.header .getLucky {
    max-width: 60px;
    font-size: 17px;
    line-height: 17px;
    padding: 10px;
    background-color: hsla(0, 0%, 20%, .9);
    border-width: 0px;
    border-bottom: solid 1px hsla(0, 0%, 35%, 1);
    order: 5;
}
.header .getLucky:hover {
    background-color: hsla(0, 0%, 14%, 1);
    border-color: #444;
}

.header .getLucky:active:focus {
    background-color: hsla(0, 0%, 11%, 1);
    border-color: #222;
}

#searchParent ::-webkit-input-placeholder {
	font-size: 2rem;
	line-height:  3rem;
	height: 30px;
    text-align:right; 
    font-family: 'Glyphicons Halflings'; 
}

#searchParent  ::-moz-placeholder {  /* Firefox 19+ */
	font-size: 2rem;
	line-height:  3rem;
	height: 30px;
    text-align:right; 
	font-family: 'Glyphicons Halflings'; 
}

#searchParent :-ms-input-placeholder {
	font-size: 2rem;
	line-height:  3rem;
	height: 30px;
    text-align:right; 
	font-family: 'Glyphicons Halflings'; 
}


.popup .panel-heading {
    display: flex;
}

/* tablet */

.panel {
    border: 3px solid #1E2124;
}
.playlist-main {
    padding: 4px 0px;
}

/* experimental, à vérifier */

.playlist-main, .panel, .playlistContainer, .list-group, .list-group > li.list-group-item, .list-group .contentDiv {
    border-radius: 0;
    touch-action: pan-y !important;
}
.playlistContainer {
    overflow-x: hidden;
}

.drag  {
    overflow: hidden;
}   
.dragged .contentDiv {
    white-space: nowrap;
}

.playlist-main  .list-group-item.opened,
.playlist-main  .list-group-item.opened, .list-group-item.opened:focus, .list-group-item.opened:hover {
    border-color: rgba(177, 177, 177, 0.65);
    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1), 0 1px 9px 0 rgba(0, 0, 0, 0.1), 0 3px 5px -1px rgba(0, 0, 0, 0.15);
    background-color: hsla(201, 33%, 22%, 0.8)
}

.playlist-main  .list-group-item.pressed {
    background-color: hsla(151, 31%, 12%, 0.6);
}
.playlist-main  .list-group-item[valid="true"] {
    background-color: hsla(151, 37%, 25%, 0.7);
}
.list-group-item > .contentDiv, .playlist-main .list-group-item {
    overflow: hidden;
}

body.touch:not(.mode1) .playlist-main .list-group-item:not(.filler)  {
    width: calc(100% - 12px);
    overflow: visible;
}

body.touch:not(.mode1)  .list-group-item:not(.filler):after { 
    content:"";
    position: absolute; 
    top:0; 
    right: -24px;
    height: 36px;
    width: 0;   
    border-width: 18px 12px;
    border-style:solid;
    border-color: transparent;
    border-left-color: hsla(0, 0%, 20%, .67);
}
body.touch:not(.mode1)  .list-group-item:nth-child(even):after {
    border-left-color: hsla(0, 0%, 27%, 0.6);
}
body.touch:not(.mode1) .list-group-item.pressed:after { 
    border-left-color: hsla(151, 31%, 12%, 0.6);
}

body.touch:not(.mode1)  .list-group-item[valid="true"]:after { 
    border-left-color: hsla(151, 37%, 25%, 0.7);
}

/*
.list-group-item > slide{
    font-size: 28px;
    line-height: 35px;
    font-weight: bold;
    color: hsla(0, 0%, 83%, 0.2);
    float: right;
}
.list-group-item > slide:before{ 
    font-family: 'Glyphicons Halflings';
    content: "\e258";
}
*/

#mobileHelp, #mobileActions {
    display: none;
}

.header > div > div.switchParent {
    padding: 0;
    display: flex;
}

.plSearch {
    flex-grow: 1000;
}

#panel1 .plFooter button[value="playing"] {
	display: none;
}
/* mobile */


.fixed-action-btn.left {
    bottom: 12px;
    left: 12px;
    right: auto;
    position: absolute;
    padding-top: 15px;
    z-index: 9876;
}

.btn-floating.btn-large {
    font-size: 23px;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    transition: .3s;
    cursor: pointer;
    vertical-align: middle;
    display: inline-block;
    color: #fff;
    position: relative;
    overflow: hidden;
    z-index: 1;
    line-height: 40px;
    padding: 0;
    background-color: #546e7a;
    text-align: center;
}
.btn-large > i {
    line-height: 60px;
    font-weight: 30px;
    text-align: center;
    __left: 31%;
}
.fixed-action-btn ul {
    left: 0;
    right: 0;
    text-align: center;
    position: absolute;
    bottom: 64px;
    margin: 0;
    opacity: 0;
    transition: all .5s ease;
}

.fixed-action-btn ul li {
    margin-bottom: 7px;
    list-style-type: none;
}
.fixed-action-btn ul {
    padding-left: 0px;
}
.fixed-action-btn ul li a {
    transform: scaleY(0.9) scaleX(0.9) translateY(0px) translateX(0px);
}
.z-depth-3 {
    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3);
}


#switchInfoBar.showLyrics > i.infos {
    display: none;
}
#switchInfoBar:not(.showLyrics) > i.lyrics {
    display: none;
}

.introjs-tooltip {
    background-color: hsla(25, 42%, 32%, 0.97)
}

@media (max-width: 1025px) {
    .toastMessage {
        __transition: none;
    }
    .panel {
        border: 0px solid #1E2124;
        position: absolute;
        transform: translateX(0%);
    }

    #panel2 {
        left: 100%;
    }

    .toastMessage {
        top: 3px;
    }
    .fullLyrics, .showVideo, .makeFav {
        width: 46px;
        height: 46px;
        font-size: 18px;
    }

    .playlist-main {
        padding: 0px;
    }
    .deleteCriteria {
        display: none !important;
    }
    .list-group-item:first-child {
        border-top-width: 0px;
    }

    .playlist-main {
        width: 100%;
    }
    .headerInputs, .header > div > div {
        padding: 0px;
    }
        
    .header button.btn.favorites {
        order: 0;
        display: block;
    }
        
    #searchParent ::-webkit-input-placeholder {
        font-size: 2rem;
        line-height:  3rem;
        height: 60px;
    }

    #searchParent  ::-moz-placeholder {  /* Firefox 19+ */
        font-size: 3rem;
        line-height:  6rem;
        height: 60px;
    }

    #searchParent :-ms-input-placeholder {
        font-size: 2rem;
        line-height:  3rem;
        height: 60px;
    }

    #progressBar {
        box-shadow: none;
    }

   #mobileHelp, #mobileActions {
       display: block;
   }
    .plFooter {
        font-size: 1.5rem;
    }
    
    .plInfos { 
        vertical-align: middle;
    }
    .plFooter button {
        height: 26px;
        width: 26px;
        margin: 0px -1px;
    }
    #nav-signup input[type="text"],  #nav-signup input[type="password"]:not([exclude="true"]) {
        max-height: 7vh;
    }
}

/* special size for iPad pro */
@media (max-width: 1025px) and (min-width: 992px) {
    .hidden-msm {
        display: none!important;
    }
    .col-msm-12 {
        width: 100% !important;
    }
}

